--- a/.github/workflows/update_commands.yml
+++ b/.github/workflows/update_commands.yml
@@ -1,7 +1,4 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
-name: Update Slash commands
+name: '🛠 Update Slash commands'
 
 on:
   push:
@@ -9,23 +6,19 @@ on:
 
 jobs:
   build:
-    timeout-minutes: 10
+    timeout-minutes: 5
+    name: '📝 Register Slash commands'
     runs-on: ubuntu-latest
     env:
       TOKEN: ${{ secrets.TOKEN }}
       CLIENT_ID: ${{ secrets.CLIENT_ID }}
-    
-    strategy:
-      matrix:
-        node-version: [16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js 16
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: '16'
         cache: 'yarn'
     - name: Install the dependencies
       uses: Borales/actions-yarn@v4
@@ -38,4 +31,22 @@ jobs:
     - name: Update the slash commands
       uses: Borales/actions-yarn@v4
       with:
-        cmd: prestart
+        cmd: register
+    - name: Upload build artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: production-${{ github.sha }}
+        retention-days: 1
+        path: |
+          dist
+          package.json
+
+  call-deploy:
+    name: "📡 Deploy workflow"
+    needs: build
+    uses: ezegatica/bot/.github/workflows/deploy.yml@main
+    with:
+      artifact-name: production-${{ github.sha }}
+    secrets:
+      TOKEN: ${{ secrets.TOKEN }}
+      CLIENT_ID: ${{ secrets.CLIENT_ID }}
