--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc",
     "prebuild": "rimraf dist",
     "start": "node dist/index.js",
-    "prestart": "node dist/rest.js",
+    "register": "node dist/rest.js",
     "dev": "nodemon --exec ts-node src/index.ts",
     "update": "ts-node src/rest.ts",
     "lint:eslint": "eslint \"src/**/*.ts\" --fix",
