--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "build": "tsc",
     "prebuild": "rimraf dist",
     "start": "node dist/index.js",
-    "register": "node dist/rest.js",
+    "register": "node dist/deploy-commands.js",
     "dev": "nodemon --exec ts-node src/index.ts",
-    "update": "ts-node src/rest.ts",
+    "dev:register": "ts-node src/deploy-commands.ts",
     "lint:eslint": "eslint \"src/**/*.ts\" --fix",
     "lint:prettier": "prettier . --write"
   },
@@ -34,5 +34,8 @@
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
     "rimraf": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=16.10"
   }
 }
