--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.11",
+    "@types/node-fetch": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
     "eslint": "^8.29.0",
@@ -33,6 +34,7 @@
     "chalk": "4.1.2",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
+    "node-fetch": "^2",
     "rimraf": "^3.0.2"
   },
   "engines": {
