--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@keyv/mongo": "^2.1.8",
     "chalk": "4.1.2",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
