--- a/package.json
+++ b/package.json
@@ -31,11 +31,16 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.14.0",
     "@keyv/mongo": "^2.1.8",
     "chalk": "4.1.2",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
+    "ffmpeg": "^0.0.4",
+    "ffmpeg-static": "^5.1.0",
     "keyv": "^4.5.2",
+    "libsodium-wrappers": "^0.7.10",
     "node-fetch": "^2",
     "rimraf": "^3.0.2"
   },
