--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "tsc",
     "prebuild": "rimraf dist",
+    "postbuild": "zx scripts/postbuild.mjs",
     "start": "node dist/index.js",
     "register": "node dist/deploy-commands.js",
     "dev": "nodemon --exec ts-node src/index.ts",
@@ -31,13 +32,17 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@discordjs/voice": "^0.14.0",
     "@keyv/mongo": "^2.1.8",
     "chalk": "4.1.2",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
+    "ffmpeg-static": "^5.1.0",
     "keyv": "^4.5.2",
+    "libsodium-wrappers": "^0.7.10",
     "node-fetch": "^2",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "zx": "^7.1.1"
   },
   "engines": {
     "node": ">=16.10"
