--- a/.github/workflows/on-pr.yml
+++ b/.github/workflows/on-pr.yml
@@ -1,9 +1,8 @@
 name: '🤠 Build and Test'
 
 on:
-  pull_request_target:
-    branches:
-      - 'main'
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   timeout-minutes: 5
