--- a/.github/workflows/on-pr.yml
+++ b/.github/workflows/on-pr.yml
@@ -5,9 +5,10 @@ on:
     branches: [ "main" ]
 
 jobs:
-  timeout-minutes: 5
+  build:
+    timeout-minutes: 5
     runs-on: ubuntu-latest
-       - name: 'Setup Node.js 16'
+    - name: 'Setup Node.js 16'
       uses: actions/setup-node@v3
       with:
         node-version: '16'
