--- a/.github/workflows/on-pr.yml
+++ b/.github/workflows/on-pr.yml
@@ -10,6 +10,8 @@ jobs:
     timeout-minutes: 5
     runs-on: ubuntu-latest
     steps:
+    - name: 'Setup Checkout'
+      uses: actions/checkout@v3
     - name: 'Setup Node.js 16'
       uses: actions/setup-node@v3
       with:
