--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "build": "tsc",
     "prebuild": "rimraf dist",
-    "postbuild": "zx scripts/postbuild.mjs",
+    "postbuild": "node dist/postbuild",
+    "postbuildaa": "zx scripts/postbuild.mjs",
     "start": "node dist/index.js",
     "register": "node dist/deploy-commands.js",
     "dev": "nodemon --exec ts-node src/index.ts",
@@ -41,8 +42,7 @@
     "keyv": "^4.5.2",
     "libsodium-wrappers": "^0.7.10",
     "node-fetch": "^2",
-    "rimraf": "^3.0.2",
-    "zx": "^7.1.1"
+    "rimraf": "^3.0.2"
   },
   "engines": {
     "node": ">=16.10"
