--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "build": "tsc",
     "prebuild": "rimraf dist",
     "postbuild": "node dist/postbuild",
-    "postbuildaa": "zx scripts/postbuild.mjs",
-    "start": "node dist/index.js",
+    "start": "forever start --uid discord dist/index.js",
+    "stop": "forever stop discord",
+    "stop:all": "forever stopall",
     "register": "node dist/deploy-commands.js",
     "dev": "nodemon --exec ts-node src/index.ts",
     "dev:register": "ts-node src/deploy-commands.ts",
@@ -39,6 +40,7 @@
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
     "ffmpeg-static": "^5.1.0",
+    "forever": "^4.0.3",
     "keyv": "^4.5.2",
     "libsodium-wrappers": "^0.7.10",
     "node-fetch": "^2",
