PM2: Cambiando forever por PM2!

--- a/.github/workflows/swap-instances.yml
+++ b/.github/workflows/swap-instances.yml
@@ -26,7 +26,6 @@ jobs:
           screen -dmS discord
           screen -S discord -X stuff "cd /home/ec2-user/bot-cicd
           yarn install --frozen-lockfile --production
-          yarn stop:all
-          yarn start
+          yarn reload
           "
              
