--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "build": "tsc",
     "prebuild": "rimraf dist",
     "postbuild": "node dist/postbuild",
-    "start": "forever start dist/index.js",
-    "stop": "forever stop discord",
-    "stop:all": "forever stopall",
     "register": "node dist/deploy-commands.js",
-    "dev": "nodemon --exec ts-node src/index.ts",
     "dev:register": "ts-node src/deploy-commands.ts",
     "lint:eslint": "eslint \"src/**/*.ts\" --fix",
-    "lint:prettier": "prettier . --write"
+    "lint:prettier": "prettier . --write",
+    "start": "pm2 start dist/index.js --name discord --output ./logs/output.txt --error ./logs/errors.txt -i max",
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "reload": "pm2 reload discord",
+    "stop": "pm2 stop discord",
+    "logs": "pm2 logs --lines 50 --nostream"
   },
   "devDependencies": {
     "@types/node": "^18.11.11",
@@ -40,10 +41,10 @@
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
     "ffmpeg-static": "^5.1.0",
-    "forever": "^4.0.3",
     "keyv": "^4.5.2",
     "libsodium-wrappers": "^0.7.10",
     "node-fetch": "^2",
+    "pm2": "^5.2.2",
     "rimraf": "^3.0.2"
   },
   "engines": {
