🔥 Mejorando el PM2 con nuevas cosas!

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
         ARGS: "-rltgoDzvO -avzr --delete"
         REMOTE_HOST: ${{ secrets.EC2_HOST }}
         REMOTE_USER: ec2-user
-        TARGET: '/home/ec2-user/bot-cicd'
+        TARGET: '/home/ec2-user/bot'
         EXCLUDE: "/node_modules/, /.git/, /.github/, /src/"
 
    
