--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "lint:eslint": "eslint \"src/**/*.ts\" --fix",
     "lint:prettier": "prettier . --write",
     "start": "pm2 start",
-    "dev": "nodemon --exec ts-node src/index.ts",
-    "reload": "pm2 reload discord",
-    "stop": "pm2 stop discord",
+    "dev:bot": "nodemon --exec ts-node src/index.ts",
+    "dev:api": "nodemon --exec ts-node src/server.ts",
+    "reload": "pm2 reload all",
+    "stop": "pm2 stop all",
     "logs": "pm2 logs --lines 50 --nostream"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^18.11.11",
     "@types/node-fetch": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
@@ -40,6 +42,7 @@
     "chalk": "4.1.2",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "ffmpeg-static": "^5.1.0",
     "keyv": "^4.5.2",
     "libsodium-wrappers": "^0.7.10",
