--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,6 @@ jobs:
         REMOTE_HOST: ${{ secrets.EC2_HOST }}
         REMOTE_USER: ec2-user
         TARGET: '/home/ec2-user/bot'
-        EXCLUDE: "/node_modules/, /.git/, /.github/, /src/"
+        EXCLUDE: "/node_modules/, /.git/, /.github/, /src/, /logs/"
 
    
